<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".activities.CreateMoodActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      android:paddingBottom="10dp"
      android:layout_marginBottom="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">
      <ImageView
          android:id="@+id/imageArrowBack"
          android:layout_marginStart="8dp"
          android:layout_marginTop="22dp"
          android:layout_marginEnd="14dp"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:contentDescription="@string/app_name"
          android:src="@drawable/ic_back_arrow_selector"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>
      <ImageView
          android:id="@+id/imageSaveNote"
          android:contentDescription="@string/app_name"
          android:layout_marginEnd="12dp"
          android:layout_width="25dp"
          android:layout_height="25dp"
          android:padding="4dp"
          app:layout_constraintEnd_toEndOf="parent"
          android:background="@drawable/background_save_button"
          android:src="@drawable/ic_save"
          app:layout_constraintBottom_toBottomOf="@id/imageArrowBack"
          app:layout_constraintTop_toTopOf="@id/imageArrowBack"
          />
      <EditText
          android:id="@+id/inputTittleName"
          android:hint="Title"
          android:layout_width="match_parent"
          android:layout_height="55dp"
          android:layout_marginStart="15dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="15dp"
          android:textSize="17sp"
          android:textColor="@color/white"
          android:textColorHint="@color/text"
          android:background="@null"
          android:imeOptions="actionDone"
          android:importantForAutofill="no"
          android:includeFontPadding="false"
          android:inputType="text"
          app:layout_constraintTop_toBottomOf="@id/imageArrowBack"
          />
      <TextView
          android:layout_height="wrap_content"
          android:textColor="@color/icons"
          android:id="@+id/textDateTime"
          android:layout_width="0dp"
          android:includeFontPadding="false"
          android:textSize="10sp"
          app:layout_constraintEnd_toEndOf="@id/inputTittleName"
          app:layout_constraintStart_toStartOf="@id/inputTittleName"
          app:layout_constraintTop_toBottomOf="@id/inputTittleName"
          />
      <EditText
          android:id="@+id/inputSubtitle"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="12dp"
          android:textColor="@color/text_subtitle"
          android:textColorHint="@color/text"
          android:textSize="14sp"
          android:background="@null"
          android:hint="Subtitle"
          android:importantForAutofill="no"
          android:includeFontPadding="false"
          android:inputType="textMultiLine"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
          app:layout_constraintTop_toBottomOf="@id/textDateTime"
          />
      <View
          android:id="@+id/viewSubtitleIndicator"
          android:layout_width="5dp"
          android:layout_height="0dp"
          android:layout_marginStart="12dp"
          android:background="@drawable/background_subtitle_indicator"
          app:layout_constraintBottom_toBottomOf="@id/inputSubtitle"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@id/inputSubtitle"
          />
      <EditText
          android:id="@+id/inputNoteText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="12dp"
          android:layout_marginBottom="15dp"
          android:background="@null"
          android:gravity="top"
          android:hint="Type here..."
          android:importantForAutofill="no"
          android:includeFontPadding="false"
          android:inputType="textMultiLine"
          android:minHeight="150dp"
          android:textColor="@color/white"
          android:textColorHint="@color/text"
          android:textSize="14sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@id/inputSubtitle"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

  <include layout="@layout/layout_change_color"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>