<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutChangeColor"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_change_color"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_top_corners">

        <TextView
            android:id="@+id/textChangeColor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="Change Mood"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- LinearLayout for "Happy" -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_mood_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_save" />

            <TextView
                android:id="@+id/textColor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Happy"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- LinearLayout for "Sad" -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_mood_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textColor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Sad"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- LinearLayout for "Angry" -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_mood_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textColor3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Angry"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- LinearLayout for "Anxious" -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_mood_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textColor4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Anxious"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- LinearLayout for "Love" -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_mood_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textColor5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Love"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/textPickColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="Pick mood"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteMood"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp">

        <ImageView
            android:src="@drawable/ic_delete"
            app:tint="@color/color_delete"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/textDeleteMood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="Delete"
            android:textColor="@color/color_delete"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>

