...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:text="Delete Mood"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteMood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageDeleteMood"
        app:layout_constraintTop_toTopOf="@id/imageDeleteMood" />
...
